[tool.poetry]
name = "vulkan-platform-py"
version = "0.1.0"
description = ""
authors = ["Rayan Hatout <rayan.hatout@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
py-cpuinfo = "^8.0.0"
GPUtil = "^1.4.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
